fix(view listing): spacing view all links and things around

--- a/css/style.css
+++ b/css/style.css
@@ -8721,6 +8721,11 @@ a.a2a_i, i.a2a_i {
   margin-bottom: 15px; }
 
 /* line 10, ../scss/fxj/_views.scss */
+.view-footer,
+.collaborate-footer {
+  font-size: 20px; }
+
+/* line 14, ../scss/fxj/_views.scss */
 .views-field-field-tipo .field-content {
   background-color: white;
   border-radius: 15px;
@@ -8728,38 +8733,38 @@ a.a2a_i, i.a2a_i {
   width: 30px;
   text-align: center;
   padding-top: 7px; }
-  /* line 18, ../scss/fxj/_views.scss */
+  /* line 22, ../scss/fxj/_views.scss */
   .views-field-field-tipo .field-content h2,
   .views-field-field-tipo .field-content .field--label {
     display: none; }
 
-/* line 24, ../scss/fxj/_views.scss */
+/* line 28, ../scss/fxj/_views.scss */
 .views-field-title a {
   display: block;
   padding: 5px; }
 
-/* line 29, ../scss/fxj/_views.scss */
+/* line 33, ../scss/fxj/_views.scss */
 .views-field-body {
   margin: 5px 0; }
 
-/* line 34, ../scss/fxj/_views.scss */
+/* line 38, ../scss/fxj/_views.scss */
 .col, .main-container .collaborate-feature-container {
   position: relative;
   margin-bottom: 15px; }
-  /* line 39, ../scss/fxj/_views.scss */
+  /* line 43, ../scss/fxj/_views.scss */
   .col .views-field-title a, .main-container .collaborate-feature-container .views-field-title a {
     background-color: #16a085;
     color: white; }
-  /* line 44, ../scss/fxj/_views.scss */
+  /* line 48, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .main-container .collaborate-feature-container .views-field-field-tipo {
     left: 20px;
     position: absolute;
     top: 60px; }
 
-/* line 51, ../scss/fxj/_views.scss */
+/* line 55, ../scss/fxj/_views.scss */
 .view-row-media {
   margin-bottom: 15px; }
-  /* line 55, ../scss/fxj/_views.scss */
+  /* line 59, ../scss/fxj/_views.scss */
   .view-row-media .views-field-field-tipo {
     background-color: #16a085;
     height: 100px;
@@ -8767,15 +8772,16 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     width: 100px;
     text-align: center; }
-    /* line 63, ../scss/fxj/_views.scss */
+    /* line 67, ../scss/fxj/_views.scss */
     .view-row-media .views-field-field-tipo .field-content {
-      border-radius: 30px;
+      border-radius: 25px;
       display: inline-block;
-      font-size: 30px;
-      height: 60px;
-      margin-top: 20px;
-      width: 60px; }
-  /* line 73, ../scss/fxj/_views.scss */
+      font-size: 20px;
+      height: 50px;
+      margin-top: 25px;
+      padding-top: 10px;
+      width: 50px; }
+  /* line 78, ../scss/fxj/_views.scss */
   .view-row-media .views-field-title,
   .view-row-media .views-field-body,
   .view-row-media .views-field-field-fecha,
@@ -8783,7 +8789,7 @@ a.a2a_i, i.a2a_i {
     padding-left: 120px; }
 
 @media (max-width: 768px) {
-  /* line 82, ../scss/fxj/_views.scss */
+  /* line 87, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .main-container .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .main-container .collaborate-feature-container .views-field-field-image {
@@ -8793,7 +8799,7 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     text-align: center;
     width: 100px; }
-    /* line 91, ../scss/fxj/_views.scss */
+    /* line 96, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen img, .main-container .collaborate-feature-container .views-field-field-imagen img,
     .col .views-field-field-image img,
     .main-container .collaborate-feature-container .views-field-field-image img {
@@ -8802,65 +8808,65 @@ a.a2a_i, i.a2a_i {
       position: relative;
       width: auto;
       max-width: none; }
-  /* line 99, ../scss/fxj/_views.scss */
+  /* line 104, ../scss/fxj/_views.scss */
   .col .views-field-title, .main-container .collaborate-feature-container .views-field-title,
   .col .views-field-body,
   .main-container .collaborate-feature-container .views-field-body {
-    padding-left: 110px; } }
+    padding-left: 120px; } }
 @media (min-width: 768px) {
-  /* line 107, ../scss/fxj/_views.scss */
+  /* line 112, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .main-container .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .main-container .collaborate-feature-container .views-field-field-image {
     height: 100px;
     margin-bottom: -30px;
     overflow: hidden; }
-  /* line 113, ../scss/fxj/_views.scss */
+  /* line 118, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .main-container .collaborate-feature-container .views-field-field-tipo {
     left: 10px;
     position: relative;
     top: -10px; }
 
-  /* line 120, ../scss/fxj/_views.scss */
+  /* line 125, ../scss/fxj/_views.scss */
   .path-frontpage .main-container .block,
   .path-frontpage .main-container .view {
     position: relative; }
-    /* line 124, ../scss/fxj/_views.scss */
+    /* line 129, ../scss/fxj/_views.scss */
     .path-frontpage .main-container .block .view-footer,
     .path-frontpage .main-container .block .collaborate-footer,
     .path-frontpage .main-container .view .view-footer,
     .path-frontpage .main-container .view .collaborate-footer {
       position: absolute;
       right: 0; }
-  /* line 131, ../scss/fxj/_views.scss */
+  /* line 136, ../scss/fxj/_views.scss */
   .path-frontpage .main-container .block .view-footer,
   .path-frontpage .main-container .block .collaborate-footer {
     top: 4em; }
-  /* line 137, ../scss/fxj/_views.scss */
+  /* line 142, ../scss/fxj/_views.scss */
   .path-frontpage .main-container .view .view-footer {
     top: 2em; } }
-/* line 146, ../scss/fxj/_views.scss */
+/* line 151, ../scss/fxj/_views.scss */
 .collaborate-header {
   margin-bottom: 15px; }
 
-/* line 151, ../scss/fxj/_views.scss */
+/* line 156, ../scss/fxj/_views.scss */
 .main-container .collaborate-header h2 {
   display: none; }
-/* line 160, ../scss/fxj/_views.scss */
+/* line 165, ../scss/fxj/_views.scss */
 .main-container .collaborate-feature {
   background-color: #f1c40f;
   color: white;
   font-size: 20px;
   text-align: center;
   padding: 20px; }
-  /* line 167, ../scss/fxj/_views.scss */
+  /* line 172, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature a {
     color: white; }
-  /* line 171, ../scss/fxj/_views.scss */
+  /* line 176, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature p {
     font-size: 20px;
     font-weight: 300; }
-  /* line 175, ../scss/fxj/_views.scss */
+  /* line 180, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature .fontawesome-icon {
     width: 40px;
     height: 40px;
@@ -8871,10 +8877,10 @@ a.a2a_i, i.a2a_i {
     margin: 0 auto 10px auto;
     padding-top: 8px; }
 @media (min-width: 992px) {
-  /* line 186, ../scss/fxj/_views.scss */
+  /* line 191, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature {
     font-size: 30px; }
-    /* line 189, ../scss/fxj/_views.scss */
+    /* line 194, ../scss/fxj/_views.scss */
     .main-container .collaborate-feature .fontawesome-icon {
       width: 70px;
       height: 70px;
@@ -8882,9 +8888,9 @@ a.a2a_i, i.a2a_i {
       font-size: 30px;
       padding-top: 14px; } }
 
-/* line 200, ../scss/fxj/_views.scss */
+/* line 205, ../scss/fxj/_views.scss */
 .footer .collaborate-header p {
   display: none; }
-/* line 204, ../scss/fxj/_views.scss */
+/* line 209, ../scss/fxj/_views.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
